--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "^10.4.12",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.546.0",
+    "pdfkit": "^0.17.2",
     "postcss": "^8.4.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-use": "^17.6.0",
     "tailwindcss": "^3.3.0"
   },
   "scripts": {
